# resume_chatbot

./: main.py  masterResume.docx  pyproject.toml  requirements.txt
